Fix icon alignment

--- a/examples/src/ui/css/main.scss
+++ b/examples/src/ui/css/main.scss
@@ -8,7 +8,7 @@ body {
 	position: fixed;
 	top: 50%;
 	left: 60%;
-	width: 400px;
+	width: 300px;
 	height: auto;
 	min-height: 30px;
 	transform: translate(-50%, -50%);
