--- a/packages/ui/src/bundle/bundle.css
+++ b/packages/ui/src/bundle/bundle.css
@@ -421,6 +421,7 @@
   align-items: center;
   cursor: pointer;
   padding: 0.2rem 0.7rem;
+  justify-content: center;
   transition: var(--duration) var(--timing);
   margin-top: var(--animation-space);
 }
