--- a/packages/ui/src/scss/partials/base-components/_button.scss
+++ b/packages/ui/src/scss/partials/base-components/_button.scss
@@ -2,6 +2,7 @@
 ._ui-button {
 	@include item;
 	padding: 0.2rem 0.7rem;
+	justify-content: center;
 
 	transition: var(--duration) var(--timing);
 	margin-top: var(--animation-space);
